--- a/.github/workflows/issue_poster.yml
+++ b/.github/workflows/issue_poster.yml
@@ -33,6 +33,7 @@ jobs:
           )"
         env:
           GH_TOKEN: ${{ github.token }}
+          GH_REPO: ${{ github.repository }}
       - name: Checkout
         uses: actions/checkout@v6
         with:
