Incorporate the organization TLD into the site title

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ repo_edit_url: "http://github.com/joshbeckman/notes/edit/master/"
 # your social media links etc
 #######################################################################
 
-title: Josh Beckman
+title: Josh Beckman's Organization
 description: Building in the open
 copyright: 
   # year: 2023
